--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,7 +1,7 @@
 body {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 1fr 10fr 1fr;
+  grid-template-rows: 1fr 20fr 1fr;
   grid-template-areas:
     "nav"
     "main"
@@ -20,6 +20,10 @@ nav {
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
   height: 100%;
+}
+
+.logo {
+  width: 100%;
 }
 
 main {
