--- a/client/css/style.css
+++ b/client/css/style.css
@@ -6,8 +6,12 @@ body {
     "nav"
     "main"
     "footer";
-  height: 100vh;
-  width: 100vw;
+  height: 80%;
+  width: 80%;
+  max-width: 2000px;
+  padding: 0 10vh;
+  margin: auto;
+  background-color: rgb(152, 152, 152);
 }
 
 #header-nav {
@@ -20,6 +24,26 @@ nav {
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
   height: 100%;
+  background-color: white;
+}
+
+.navigation ul {
+  margin-right: 5%;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.mode-slider {
+  padding-bottom: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .logo {
@@ -33,6 +57,7 @@ main {
   grid-template-areas:
     "content content calender"
     "content content chat";
+  background-color: white;
 }
 
 .main-content {
@@ -53,4 +78,5 @@ main {
 footer {
   grid-area: footer;
   border: 1px solid black;
+  background-color: white;
 }
