added "addFriend" to header_nav, created add_friend component

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -38,6 +38,10 @@ nav {
   align-items: flex-end;
 }
 
+.material-icons {
+  cursor: pointer;
+}
+
 .mode-slider {
   padding-bottom: 20%;
   display: flex;
