--- a/client/css/style.css
+++ b/client/css/style.css
@@ -93,9 +93,17 @@ main {
 }
 
 .chat {
-  grid-area: chat;
-  border-top: 1px solid rgb(23, 26, 33);
+  display: grid;
+  grid-template-rows: 20px;
+  column-gap: 1em;
+  border: 1px solid orange;
 }
+.chat div {
+  border: 1px solid rgb(159, 12, 49);
+  width: auto;
+  height: 100px;
+}
+
 
 footer {
   grid-area: footer;
