--- a/client/css/style.css
+++ b/client/css/style.css
@@ -80,3 +80,11 @@ footer {
   border: 1px solid black;
   background-color: white;
 }
+
+.games-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+}
