--- a/client/css/style.css
+++ b/client/css/style.css
@@ -13,6 +13,10 @@ body {
   margin: auto;
   background-color: rgb(27, 40, 56);
   color: rgb(199, 213, 224);
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
 }
 
 .content {
@@ -67,6 +71,17 @@ main {
 .main-content {
   grid-area: content;
   border-right: 1px solid rgb(23, 26, 33);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.main-content input {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
 
 .calender {
   grid-area: calender;
@@ -75,7 +90,7 @@ main {
 
 .chat {
   grid-area: chat;
-  border: 1px solid rgb(102, 192, 244);
+  border-top: 1px solid rgb(23, 26, 33);
 }
 
 footer {
@@ -90,20 +105,15 @@ footer {
 }
 
 button {
-  display: inline-block;
-  padding: 0.46em 1.6em;
-  border: 0.1em solid #000000;
-  margin: 0 0.2em 0.2em 0;
-  border-radius: 0.12em;
+  background-color: rgb(42, 71, 94);
+  border-radius: 12px;
+  border: 0;
   box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  color: #000000;
-  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-  background-color: #ffffff;
-  text-align: center;
-  transition: all 0.15s;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
 }
 
 button:hover {
@@ -119,4 +129,38 @@ button:hover {
   z-index: -1;
   margin: 0;
   left: 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  background-color: #1b2838;
+  border-radius: 20px;
+  box-sizing: border-box;
+  min-height: 500px;
+  padding: 20px;
+  min-width: 320px;
+}
+
+label {
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+fieldset {
+  border: none;
+}
+
+h1 {
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
 }
