--- a/client/css/style.css
+++ b/client/css/style.css
@@ -91,14 +91,17 @@ main {
   grid-area: calender;
   border: 1px solid rgb(102, 192, 244);
 }
-
 .chat {
   display: grid;
   grid-template-rows: 20px;
-  column-gap: 1em;
   border: 1px solid orange;
 }
-.chat div {
+.chat-topics {
+  display: grid;
+  grid-template-rows: 20px;
+  border: 1px solid orange;
+}
+.chat-topics div {
   border: 1px solid rgb(159, 12, 49);
   width: auto;
   height: 100px;
