--- a/client/css/style.css
+++ b/client/css/style.css
@@ -166,13 +166,26 @@ section .event {
 }
 
 .chat {
+  align-items: baseline;
   display: grid;
-  grid-template-rows: 20px;
+  grid-template-columns: 1fr;
+  text-align: left;
+}
+.chat-head {
+  align-items: baseline;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  text-align: left;
+}
+
+.chat-head li{
+ list-style: none;
 }
 
 .chat-topics {
   display: grid;
-  grid-template-rows: 20px;
+  grid-template-columns: 1fr;
+  text-align: left;
 }
 
 .chat-topics div {
@@ -180,6 +193,80 @@ section .event {
   height: 100px;
 }
 
+.chat-topics h2 {
+  margin-bottom: 5px;
+}
+.chat-topics p {
+  margin-top: 0px;
+}
+
+.single-post {
+
+  text-align: left;
+  
+  width: 500px;
+}
+.single-post h2 {
+
+  margin-bottom: 5px;
+  padding-left: 5px;
+
+}
+.single-post p {
+
+  margin-top: 2px;
+  font-size: 12px;
+  padding-left: 5px;
+  font-weight: 300;
+
+}
+
+.head {
+  height: 75px;
+}
+
+.body {
+  height: 150px;
+}
+.head, .body{
+  background-color: rgb(27, 40, 56);
+}
+
+.head h2 {
+  padding-top: 7.5px;
+}
+
+.head p {
+  margin-bottom: 2px;
+}
+
+.body p{
+  padding-top: 5px;
+
+}
+
+.comment-section {
+
+  width: 500px;  
+}
+
+.comment-section div {
+  height: 75px;
+  background-color: rgb(27, 40, 56);
+  text-align: left;
+}
+.comment-section p {
+  margin-top: 2px;
+  font-size: 12px;
+  padding-left: 5px;
+  font-weight: 300;
+}
+
+.addCommentButton {
+  margin-top: 2px;
+  font-size: 12px;
+  text-align: center;
+}
 
 footer {
   grid-area: footer;
